# PYCTF-scoreboard

./: README.md  pyproject.toml
app/: app.py  fentch.py  fetch.py
app/templates/: scoreboard.html
