[project]
name = "pyctf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yixinBC", email = "yixinbc@foxmail.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "jinja2>=3.1.3",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
    "aiocache>=0.12.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0" }

[project.scripts]
hello = "pyctf:main"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
